WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
320113
LibWebRTCAudioModule has a data race on m_isPlaying and m_audioTransport
https://bugs.webkit.org/show_bug.cgi?id=320113
Summary
LibWebRTCAudioModule has a data race on m_isPlaying and m_audioTransport
Ahmad Saleem
Reported
2026-07-23 13:10:20 PDT
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-07-23 13:10:27 PDT
<
rdar://problem/183054655
>
Ahmad Saleem
Comment 2
2026-07-23 13:11:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/70048
EWS
Comment 3
2026-07-28 01:19:18 PDT
Committed
318047@main
(17afba52f935): <
https://commits.webkit.org/318047@main
> Reviewed commits have been landed. Closing PR #70048 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug