LibWebRTCAudioModule has a data race on m_isPlaying and m_audioTransport https://bugs.webkit.org/show_bug.cgi?id=320113 rdar://183054655

Reviewed by Youenn Fablet.

m_isPlaying and m_audioTransport are written from StartPlayout(),
StopPlayout(), and RegisterAudioCallback() — called from libwebrtc's
callback threads — and read from pollAudioData()/pollFromSource() on
the internal WorkQueue thread, as well as from Playing(), with no
lock or atomic. Make both members std::atomic to close the race.

* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCAudioModule.cpp:
(WebCore::LibWebRTCAudioModule::StartPlayout):
(WebCore::LibWebRTCAudioModule::StopPlayout):
(WebCore::LibWebRTCAudioModule::pollFromSource):
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCAudioModule.h:

Canonical link: https://commits.webkit.org/318047@main